# Small-Neural-Network

./: .gitignore  AUTHORS.md  CMakeLists.txt  License  Makefile  README.md  main.cpp
Java Lab Sample/: Main.java  Neuron.java  README.md  build.sh  neuralNetSimulator.java  train.txt
